##
## File:        Makefile.am 
## Package:     Babel makefiles
## Copyright:   (c) 2000-2001 Lawrence Livermore National Security, LLC
## Revision:    $Revision: 6171 $
## Modified:    $Date: 2007-10-08 16:39:28 -0700 (Mon, 08 Oct 2007) $
## Description: automake makefile to build the Babel documentation
##




docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)/papers

doc_DATA = \
  hpdc99.pdf \
  hpdc99.ps \
  ibm-981021.pdf \
  ibm-981021.ps \
  iscope-99.pdf \
  iscope-99.ps \
  siam-pp-2001.pdf \
  siam-pp-2001.ps 

EXTRA_DIST = $(doc_DATA)
