##
## File:        Makefile.am
## Package:     Babel regression checks
## Revision:    $Revision: 5354 $
## Modified:    $Date: 2006-04-06 11:49:18 -0700 (Thu, 06 Apr 2006) $
## Description: automake makefile for contracts regression tests
##
## Copyright (c) 2003-2008, Lawrence Livermore National Security, LLC.
## Produced at the Lawrence Livermore National Laboratory.
## Written by the Components Team <components@llnl.gov>
## UCRL-CODE-2002-054
## All rights reserved.
## 
## This file is part of Babel. For more information, see
## http://www.llnl.gov/CASC/components/. Please read the COPYRIGHT file
## for Our Notice and the LICENSE file for the GNU Lesser General Public
## License.
## 
## This program is free software; you can redistribute it and/or modify it
## under the terms of the GNU Lesser General Public License (as published by
## the Free Software Foundation) version 2.1 dated February 1999.
## 
## This program is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the IMPLIED WARRANTY OF
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the terms and
## conditions of the GNU Lesser General Public License for more details.
## 
## You should have received a copy of the GNU Lesser General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA

SUBDIRS =  libC libCxx libF77 libF90 libF03 libPython libJava \
	runC runCxx runF77 runF90 runF03 runPython \
	runJava runSIDL
EXTRA_DIST = contracts.sidl
